--- a/trunk/gadget/settings.html
+++ b/trunk/gadget/settings.html
@@ -4,6 +4,7 @@
     <title>Settings</title>
     <script type="text/javascript" src="./js/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="./js/tpg.js"></script>
+    <script type="text/javascript" src="./js/helper.js"></script>
     <script type="text/javascript" src="./js/settings.js"></script>
 	<link href="styles/settings.css" rel="stylesheet" type="text/css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
