--- a/gadget/gadget.html
+++ b/gadget/gadget.html
@@ -4,12 +4,13 @@
     <title>Gadget</title>
     <script type="text/javascript" src="./js/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="./js/tpg.js"></script>
+	<script type="text/javascript" src="./js/helper.js"></script>
     <script type="text/javascript" src="./js/gadget.js"></script>
 	<link href="styles/gadget.css" rel="stylesheet" type="text/css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 <body onload="gadget_load()">
-	<g:background src="./styles/images/theme_1/back.png" style="position:absolute;top:0;left:0;z-index:-9999" />
+	<g:background src="./styles/images/theme_1/back.png" style="position:absolute;top:0;left:0;z-index:-9999;"/>
 	<div class="docked">
 		<h1>TPG Gadgetzor</h1>
 		<a href="javascript:;" title="update" class="refresh"></a>
